// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Storyshots components/Search/SearchBar Default 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1nkq8lt css-6lshyd"
    >
      <button
        aria-controls="select-1-menu"
        aria-describedby="select-1-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0001 leafygreen-ui-3qrx9g"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-2"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-1qmzz4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-4dp7tf"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 10-8.612.086L5.408 11.5a1 1 0 00.866.499H6.5V6a1.5 1.5 0 113 0v6h.224a1 1 0 00.863-.496L12.34 8.5h-.009z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 00-1 0zM10 14v-1H6v1a1 1 0 001 1h2a1 1 0 001-1z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 01-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          class="css-z4vplf leafygreen-ui-90q1a7"
        >
          <div
            class="leafygreen-ui-lzja97"
          >
            <input
              aria-invalid="true"
              aria-labelledby="searchbar-input"
              autocomplete="on"
              class="leafygreen-ui-18wtnk9"
              data-cy="searchbar-input"
              id="textinput-9"
              placeholder="optional, regexp to search"
              required=""
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              class="lg-ui-icon-selector-0000 leafygreen-ui-11c7q5r"
            >
              <svg
                alt=""
                aria-hidden="true"
                class="leafygreen-ui-1lzd8bx"
                height="16"
                role="presentation"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.8639 1.51357C8.49039 0.828811 7.50961 0.828811 7.1361 1.51357L1.12218 12.5388C0.763263 13.1968 1.23814 14 1.98608 14H14.0139C14.7619 14 15.2367 13.1968 14.8778 12.5388L8.8639 1.51357ZM7 5C7 4.44772 7.44772 4 8 4C8.55228 4 9 4.44772 9 5V9C9 9.55228 8.55228 10 8 10C7.44772 10 7 9.55228 7 9V5ZM9 12C9 12.5523 8.55228 13 8 13C7.44772 13 7 12.5523 7 12C7 11.4477 7.44772 11 8 11C8.55228 11 9 11.4477 9 12Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="css-1kijwh"
        >
          <div
            class="leafygreen-ui-cssveg css-1a9hvxo"
            data-cy="searchbar-error"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Storyshots components/Search/SearchBar With Search Suggestions 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1nkq8lt css-6lshyd"
    >
      <button
        aria-controls="select-3-menu"
        aria-describedby="select-3-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0001 leafygreen-ui-3qrx9g"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-4"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-1qmzz4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-4dp7tf"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 10-8.612.086L5.408 11.5a1 1 0 00.866.499H6.5V6a1.5 1.5 0 113 0v6h.224a1 1 0 00.863-.496L12.34 8.5h-.009z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 00-1 0zM10 14v-1H6v1a1 1 0 001 1h2a1 1 0 001-1z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 01-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          class="css-z4vplf leafygreen-ui-90q1a7"
        >
          <div
            class="leafygreen-ui-lzja97"
          >
            <input
              aria-invalid="false"
              aria-labelledby="searchbar-input"
              autocomplete="on"
              class="leafygreen-ui-1kmfbzh"
              data-cy="searchbar-input"
              id="textinput-10"
              placeholder="optional, regexp to search"
              required=""
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              class="lg-ui-icon-selector-0000 leafygreen-ui-11c7q5r"
            />
          </div>
        </div>
        <div
          class="css-1kijwh"
        >
          <button
            aria-disabled="true"
            aria-label="Select plus"
            class="leafygreen-ui-beb9er"
            data-cy="searchbar-submit"
            tabindex="0"
          >
            <div
              class="leafygreen-ui-xhlipt"
            >
              <svg
                aria-label="Plus Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.5 2a1 1 0 00-1 1v3.5H3a1 1 0 00-1 1v1a1 1 0 001 1h3.5V13a1 1 0 001 1h1a1 1 0 001-1V9.5H13a1 1 0 001-1v-1a1 1 0 00-1-1H9.5V3a1 1 0 00-1-1h-1z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
